RESOLVED FIXED131038
Invalidate CFNetwork connection cache on memory pressure.
https://bugs.webkit.org/show_bug.cgi?id=131038
Summary Invalidate CFNetwork connection cache on memory pressure.
Andreas Kling
Reported 2014-04-01 08:33:30 PDT
Invalidate CFNetwork connection cache on memory pressure.
Attachments
Patch (1.64 KB, patch)
2014-04-01 08:34 PDT, Andreas Kling
ggaren: review+
Andreas Kling
Comment 1 2014-04-01 08:34:48 PDT
Geoffrey Garen
Comment 2 2014-04-01 09:39:09 PDT
Comment on attachment 228287 [details] Patch r=me Does this help?
Andreas Kling
Comment 3 2014-04-01 10:23:38 PDT
(In reply to comment #2) > (From update of attachment 228287 [details]) > r=me > > Does this help? Yeah, it deforests a jungle of connection objects that I discovered while trying to account for all the memory in the network process.
Andreas Kling
Comment 4 2014-04-01 10:45:31 PDT
Note You need to log in before you can comment on or make changes to this bug.