Invalidate CFNetwork connection cache on memory pressure. <https://webkit.org/b/131038>

Stop holding on to cached HTTP connections if we come under memory pressure.

Reviewed by Geoff Malloc-Garen.

* NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::NetworkProcess::platformLowMemoryHandler):

Canonical link: https://commits.webkit.org/149101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166597 268f45cc-cd09-0410-ab3c-d52691b4dbfc